--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -2,3 +2,4 @@ sonar.projectKey=sample:project
 sonar.projectName=Sample project
 sonar.projectVersion=1.0
 sonar.host.url=http://18.212.193.178:9002
+sonar.sources=.
